fix: margin around record button on mobile view (#154)

--- a/scl/core/static/scl.css
+++ b/scl/core/static/scl.css
@@ -280,7 +280,7 @@
 }
 
 .scl-button--record {
-  margin: 0;
+  margin-bottom: 0;
   border-radius: 20px;
   height: 40px;
   width: auto;
